--- a/index.html
+++ b/index.html
@@ -181,8 +181,17 @@
           <div class="text">Hours of Soft Skills</div>
         </div>
         <div class="box">
-          <div class="box_content">100+</div>
-          <div class="text">Hours of Soft Skills</div>
+          <div class="box_content"> <i class="far fa-star" style="color: deeppink;"></i>
+            <i class="far fa-star" style="color: forestgreen"></i>
+            <i class="far fa-star"style="color: blue;"></i>
+          </div>
+          <div class="text">Hacker Rank </div>
+        </div>
+
+        <div class="gitResult">
+          <img src="./images/git.png" alt="">
+      </div>
+  
         </div>
       </div>
     </div>
